--- a/python/blue.css
+++ b/python/blue.css
@@ -40,6 +40,16 @@ pre.out
 {
     border: 1px solid #2864c8;
 }
+pre.freeform
+{
+    white-space: pre;
+    overflow-x: auto;
+}
+
+span.light
+{
+    color: #888888;
+}
 
 a
 {
@@ -61,6 +71,7 @@ div.pageflip
 {
     height: 50px;
     margin: 50px 0px;
+    text-align: center;
 }
 
 div.pageflip a
@@ -76,8 +87,7 @@ div.pageflip a
 
 div.pageflip a:hover
 {
-    background-color: #8cb4ff;
-    box-shadow: 0px 5px #aac8ff;
+    background-color: #6da0f2;
     color: #ffffff;
     transition-duration: 0.2s;
 }
