Created the "Loops" page
Added the tutorial page on loops, and made some slight tweaks to the formatting of the previous pages (comments in code now displays in a lighter color, and the page flip buttons now use a lighter blue when hovered).

--- a/python/blue.css
+++ b/python/blue.css
@@ -87,7 +87,7 @@ div.pageflip a
 
 div.pageflip a:hover
 {
-    background-color: #6da0f2;
+    background-color: #92b8fc;
     color: #ffffff;
     transition-duration: 0.2s;
 }
